--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -920,7 +920,7 @@ fr:
     show:
       last_update: Dernière entrée traitée le
       next_steps:
-        code_word: Quelles questions poser et où chercher sur le site?
+        code_word: 
         heading: Qu'est-ce que tu dois faire?
       opening_section:
         days:
@@ -949,7 +949,9 @@ fr:
           pinterest: Pinterest
           twitter: Twitter
           youtube: Youtube
-      what: De quoi s'agit-il?
+      what:
+        code_word: Quelles questions poser et où chercher sur le site?
+        heading: De quoi s'agit-il?
       who: Qui propose cette aide?
       who_contact_people:
         dr: Dr.
