--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1245,7 +1245,7 @@ en:
     show:
       last_update: Entry last modified on
       next_steps:
-        code_word: What do you have to ask for or look for on the website?
+        code_word: 
         heading: What do you have to do?
       opening_section:
         days:
@@ -1274,7 +1274,9 @@ en:
           pinterest: Pinterest
           twitter: Twitter
           youtube: Youtube
-      what: What is this about?
+      what:
+        code_word: What do you have to ask for or look for on the website?
+        heading: What is this about?
       who: Who offers this help?
       who_contact_people:
         dr: Dr.
