mini-feature: clarat-org/clarat#720 - minor adjustments to opening display_string

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -894,7 +894,8 @@ ar:
     display_string:
       appointment: "حسب الإتفاق"
       midnight_exception: 24:00 ساعة
-      time_format: " %H:%M ساعة "
+      time_format_close: "%H:%M ساعة"
+      time_format_open: " %H:%M ساعة "
       time_frame: "%{open} - %{close}"
   organizations:
     show:
