--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1379,7 +1379,8 @@ de:
     display_string:
       appointment: nach Vereinbarung
       midnight_exception: 24:00 Uhr
-      time_format: "%H:%M Uhr"
+      time_format_close: "%H:%M Uhr"
+      time_format_open: "%H:%M"
       time_frame: "%{open} - %{close}"
   organizations:
     show:
