--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -905,7 +905,8 @@ tr:
     display_string:
       appointment: Sözleşilen vakit
       midnight_exception: Saat 24:00
-      time_format: "%H:%M Saat"
+      time_format_close: "%H:%M Saat"
+      time_format_open: "%H:%M"
       time_frame: "%{open} - %{close}"
   organizations:
     show:
