--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1327,7 +1327,7 @@ de:
     show:
       last_update: Eintrag zuletzt bearbeitet am
       next_steps:
-        code_word: 
+        code_word: Wonach musst du fragen oder auf der Webseite suchen?
         heading: Was musst du tun?
       opening_section:
         days:
