--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1250,6 +1250,7 @@ de:
           Bescheid, sobald es bei clarat auch Hilfe in deiner Nähe gibt.
           Trage dazu deine E-Mail-Adresse hier ein.
       nav_lang:
+        german_content_warning: Wähle deine Sprache
         languages:
           ar: "عربي"
           de: Deutsch
@@ -1327,7 +1328,7 @@ de:
     show:
       last_update: Eintrag zuletzt bearbeitet am
       next_steps:
-        code_word: Wonach musst du fragen oder auf der Webseite suchen?
+        code_word: 'So heißt die Hilfe beim Anbieter:'
         heading: Was musst du tun?
       opening_section:
         days:
@@ -1615,9 +1616,9 @@ de:
     impressum:
       heading: Impressum
       notice: clarat ist eine Suchmaschine. clarat sagt dir, wo du Hilfe bekommst. Zum Beispiel, wo du einen Experten findest, der dir bei deinem Problem hilft. clarat selber kann dir nur beim Suchen helfen.
-      responsible_html: |
+      responsible_html: |-
         Geschäftsführer<br/>
-        Dr. Stefan Shaw und Mathias Barth<br/>
+        Anne Schulze und Mathias Barth<br/>
         (verantwortlich für den Inhalt der Website)<br/><br/>
         Handelsregister: AG Charlottenburg<br/>
         HRB 174379 B
@@ -1692,6 +1693,13 @@ de:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
+      section_choice:
+        family:
+          claim: 
+          title: 
+        refugees:
+          claim: 
+          title: 
       title:
         refugees: 
     shared:
