--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1057,7 +1057,7 @@ en:
         '568': Dutch - Nederlands
         '639': Dari - دری
         amh: Amharic - አማርኛ
-        ara: Arabian - عربي
+        ara: Arabic - عربي
         aze: Azerbaijani - Azərbaycan
         ban: Balinese - Basa Bali
         bel: Belarusian - беларуская мова
@@ -1077,7 +1077,7 @@ en:
         hin: Hindi - हिन्दी
         hrv: Kroatian - hrvatski
         hun: Hungarian - magyar
-        ita: Italic - italiano
+        ita: Italian - italiano
         kik: Kikuyu - Gĩkũyũ
         kin: Kinyarwanda - kinyaRwanda
         kor: Korean - 한국말 / 조선말
@@ -1146,7 +1146,7 @@ en:
         gplus:
           anchor: Google+
           href: https://plus.google.com/110429028641743127592/about
-        impressum: imprint
+        impressum: impressum
         privacy: privacy
         tos: legal information
         twitter:
@@ -1169,6 +1169,7 @@ en:
           If you are interested, please enter your email and we will reach out
           to you once as soon as that is the case.
       nav_lang:
+        german_content_warning: Legal information can only be viewed in German
         languages:
           ar: "عربي"
           de: Deutsch
@@ -1538,7 +1539,7 @@ en:
       notice: clarat ist eine Suchmaschine. clarat sagt dir, wo du Hilfe bekommst. Zum Beispiel, wo du einen Experten findest, der dir bei deinem Problem hilft. clarat selber kann dir nur beim Suchen helfen.
       responsible_html: |-
         Geschäftsführer<br/>
-        Dr. Stefan Shaw und Mathias Barth<br/>
+        Anne Schulze und Mathias Barth<br/>
         (verantwortlich für den Inhalt der Website)<br/><br/>
         Handelsregister: AG Charlottenburg<br/>
         HRB 174379 B
@@ -1613,6 +1614,13 @@ en:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
+      section_choice:
+        family:
+          claim: 
+          title: 
+        refugees:
+          claim: 
+          title: 
       title:
         refugees: 
     shared:
@@ -1633,7 +1641,7 @@ en:
     faq: frequently-asked-questions
     haeufige-fragen: frequently-asked-questions
     home: 
-    impressum: imprint
+    impressum: impressum
     new: new
     offers: offers
     organizations: organizations
