--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1398,11 +1398,10 @@ en:
         means she knows a lot about developing countries. She always stays on
         top of things. At clarat she is part of the research team. Her favorite
         song is “Paint It Black” by the Rolling Stones.
-      lavinia: |
+      lavinia: |-
         Lavinia studied peace and conflict studies, which means she knows a lot
         about conflicts and war. She is good at making compelling arguments. At
-        clarat she is part of the research team, where she organizes the
-        offerings by topics. Her favorite song is “I’m not Done” by Fever Ray.
+        clarat she is part of the research team. Her favorite song is “I’m not Done” by Fever Ray.
       line: |
         Line is a theatre director. She also knows a lot about literature and
         language, which means she knows the effect that words can have on people.
@@ -1613,8 +1612,10 @@ en:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      title:
+      claim:
+        family: 
         refugees: 
+      title: 
     shared:
       address:
         email: |
