mini-feature clarat-org/clarat#900 - update _base master for new language identifiers and pulled localeapp

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -472,10 +472,12 @@ ar:
         ber: Ber
         bos: Bos
         bul: Bul
+        cpe: Cpe
         cze: Cze
         deu: Deu
         ell: Ell
         eng: Eng
+        ewo: Ewo
         fas: Fas
         fin: Fin
         fra: Fra
@@ -655,10 +657,12 @@ ar:
         ber: "لغة أمازيغية - Tamaziɣt"
         bos: "لغة بوسنوية - bosanski"
         bul: "لغة بلغارية - български"
+        cpe: Kamtok - Pidgin
         cze: "لغة تشيكية - čeština"
         deu: "لغة ألمانية - Deutsch"
         ell: "لغة يونانية - ελληνικά"
         eng: "لغة إنجليزية - English"
+        ewo: Ewondo - Ewondo
         fas: "لغة فارسية - فارسی"
         fin: "لغة فنلندية - suomi"
         fra: "لغة فرنسية - Français"
@@ -1075,15 +1079,19 @@ ar:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
+      claim:
+        family: 
+        refugees: 
+      family:
+        title: 
+      refugees:
+        title: 
       section_choice:
         family:
-          claim: 
           title: 
         refugees:
-          claim: 
           title: 
-      title:
-        refugees: 
+      title: 
     shared:
       address:
         email: |
