--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -486,10 +486,12 @@ tr:
         ber: Ber
         bos: Bos
         bul: Bul
+        cpe: Cpe
         cze: Cze
         deu: Deu
         ell: Ell
         eng: Eng
+        ewo: Ewo
         fas: Fas
         fin: Fin
         fra: Fra
@@ -672,10 +674,12 @@ tr:
         ber: Berberi dilleri - Tamaziɣt
         bos: Boşnakça - bosanski
         bul: Bulgarca - български
+        cpe: Kamtok - Pidgin
         cze: "Çekçe - čeština"
         deu: Almanca - Deutsch
         ell: Yunanca - ελληνικά
         eng: "İngilizce - English"
+        ewo: Ewondo - Ewondo
         fas: Farsça - فارسی
         fin: Fince - suomi
         fra: Fransızca - Français
@@ -1095,15 +1099,19 @@ tr:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
+      claim:
+        family: 
+        refugees: 
+      family:
+        title: 
+      refugees:
+        title: 
       section_choice:
         family:
-          claim: 
           title: 
         refugees:
-          claim: 
           title: 
-      title:
-        refugees: 
+      title: 
     shared:
       address:
         email: |
